(lang dune 3.8)

(version 0.1.0)

(name norg)

(generate_opam_files)

(license MIT)

(authors "Rin <hi@rin.rocks>")

(maintainers "Rin <hi@rin.rocks>")

(source (github r17x/universe))

(package
  (name norg)
  (synopsis "Norg parser")
  (description "Norg parser for the Neorg 1.0 syntax")
  (depends
    (ocaml (>= 4.14.0))
    (angstrom (>= 0.15.0))
  ))