(melange.emit
 (alias client)
 (target app)
 (enabled_if
  (= %{profile} "dev"))
 (modules index)
 (libraries melange styled-ppx.melange shared_js reason-react)
 (preprocess
  (pps
   reason-react-ppx
   styled-ppx
   server-reason-react.browser_ppx
   -js
   melange.ppx))
 (module_systems commonjs))
