(executable
 (enabled_if
  (= %{profile} "dev"))
 (name server)
 (libraries
  dream
  dream-livereload
  shared_native
  styled-ppx.native
  server-reason-react.react
  server-reason-react.reactDom
  server-reason-react.js)
 (preprocess
  (pps
   server-reason-react.ppx
   server-reason-react.melange_ppx
   server-reason-react.browser_ppx
   styled-ppx
   lwt_ppx)))
