(executable
 (enabled_if
  (= %{profile} "dev"))
 (name server)
 (libraries
  crunch
  dream
  lwt.unix
  shared_native
  styled-ppx.native
  server-reason-react.react
  server-reason-react.reactDom
  server-reason-react.js)
 (preprocess
  (pps
   server-reason-react.ppx
   server-reason-react.melange_ppx
   server-reason-react.browser_ppx
   styled-ppx
   lwt_ppx)))

(rule
 (target blogs_content.ml)
 (deps
  (source_tree %{project_root}/blogs))
 (action
  (with-stdout-to
   %{target}
   (run ocaml-crunch -m plain %{project_root}/blogs))))
