(library
 (name shared_js)
 (modes melange)
 (wrapped false)
 (libraries
  styled-ppx.melange
  reason-react
  melange-webapi
  melange.belt
  melange.dom)
 (preprocess
  (pps
   styled-ppx
   melange.ppx
   reason-react-ppx
   server-reason-react.browser_ppx
   -js)))

(copy_files "../native/shared/*.re")
