(include_subdirs unqualified)

(library
 (name shared_native)
 (libraries
  server-reason-react.react
  server-reason-react.reactDom
  server-reason-react.js
  server-reason-react.belt
  server-reason-react.dom
  server-reason-react.webapi)
 (flags :standard -w -26-27)
 (wrapped false)
 (preprocess
  (pps
   server-reason-react.melange_ppx
   server-reason-react.ppx
   server-reason-react.browser_ppx)))
