(include_subdirs unqualified)

(library
 (name shared_native)
 (flags :standard -w -26-27) ; browser_only removes code form the server, making this warning necessary
 (libraries
  styled-ppx.native
  server-reason-react.react
  server-reason-react.reactDom
  server-reason-react.js
  server-reason-react.belt
  server-reason-react.dom
  server-reason-react.webapi)
 (wrapped false)
 (preprocess
  (pps
   styled-ppx
   --native
   server-reason-react.ppx
   server-reason-react.melange_ppx
   server-reason-react.browser_ppx)))
